    - POSIX: only assume -1 result value as error on open() calls
    - POSIX: show operating system's error reason if opening a file failed
    - Added support for custom progress notification while saving to RIFF file.
    - Fixed embarrassing old bug: POSIX read() errors were never detected on
      Chunk::Read() calls due to signment incompatible variable. 

  * src/gigextract.cpp:
    - export sample loop, unity note and fine tune with libsndfile

  * src/riftree.cpp:
    - added more command line options for being able to also dump other kind
      of file formats similar but not equal to the RIFF format

Version 3.3.0 (30 Jul 2009)

  * general changes:
    - fixed compilation with gcc 4.3
    - fixes for building with Visual C++
    - minor fix in configure for building DLL on Windows

  * src/gig.cpp, src/gig.h:
    - added partial support for MIDI rules, only the Controller
      Triggered rule is supported so far
    - bugfix: removed another iterator invalidation in DeleteSample
    - bugfix in Sample::LoadSampleData*(): reset sample read position to
      sample start before trying to (re)load sample data from file (#82)
    - bugfix: EG3 depth parameter was not saved correctly
    - fixed crash which occured when streaming a gig sample with
      bi-directional (a.k.a. 'pingpong') loop type (fixes #102)

  * src/RIFF.cpp, src/RIFF.h:
    - bugfix: saving to the same file after the file size had been
      increased made the file corrupt (#82)
    - bugfix: refuse Chunk::Read() in case chunk has just been added, that
      is not written physically yet (#82)
    - bugfix: saving to the same file after the file size had been
      decreased sometimes also made the file corrupt!
    - bugfix: undefined behavior (e.g. endless loop) when opening zero
      length files, now throws a RIFF::Exception instead (fixes bug #121)
    - bugfix: destructor for base class RIFF::Chunk accessed members